--- a/package.json
+++ b/package.json
@@ -1,17 +1,18 @@
 {
   "name": "@yafh/use-tinykeys",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "description": "Vue composition API for listen keyboard event.",
   "type": "module",
   "scripts": {
-    "test":"",
-    "build":"tsup"
+    "test": "vite -c test/vite.config.ts",
+    "build": "tsup"
   },
   "peerDependencies": {
     "vue": "^3.2.0"
   },
   "devDependencies": {
     "@types/node": "^18.11.10",
+    "@types/ua-parser-js": "^0.7.36",
     "tsup": "^6.5.0",
     "typescript": "^4.9.3",
     "vite": "^3.2.4"
@@ -31,6 +32,15 @@
   "main": "dist/index.cjs",
   "module": "dist/index.js",
   "types": "dist/index.d.ts",
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.js",
+      "require": "./dist/index.cjs"
+    },
+    "./dist": "./dist",
+    "./package.json": "./package.json"
+  },
   "files": [
     "dist"
   ],
@@ -38,4 +48,11 @@
     "access": "public"
   },
   "homepage": "https://github.com/YanAndFish/use-tinykeys#readme",
+  "bugs": {
+    "url": "https://github.com/YanAndFish/use-tinykeys/issues"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/YanAndFish/use-tinykeys.git"
+  }
 }
