--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,21 +1,29 @@
 {
   "compilerOptions": {
     /* Visit https://aka.ms/tsconfig to read more about this file */
-    /* Language and Environment */
     "target": "ES2018" /* Set the JavaScript language version for emitted JavaScript and include compatible library declarations. */,
-    /* Modules */
     "module": "ESNext" /* Specify what module code is generated. */,
     "baseUrl": "./" /* Specify the base directory to resolve non-relative module names. */,
     "paths": {
       "@/*": ["src/*"]
     },
-    /* Interop Constraints */
+    "useDefineForClassFields": true,
+    "moduleResolution": "node",
+    "resolveJsonModule": true,
+    "lib": [
+      "DOM",
+      "ES2018"
+    ] /* Specify a set of bundled library declaration files that describe the target runtime environment. */,
     "esModuleInterop": true /* Emit additional JavaScript to ease support for importing CommonJS modules. This enables 'allowSyntheticDefaultImports' for type compatibility. */,
     "forceConsistentCasingInFileNames": true /* Ensure that casing is correct in imports. */,
-    /* Type Checking */
     "strict": true /* Enable all strict type-checking options. */,
     "strictNullChecks": true /* When type checking, take into account 'null' and 'undefined'. */,
-    /* Completeness */
     "skipLibCheck": true /* Skip type checking all .d.ts files. */
-  }
+  },
+  "include": ["src/**/*.ts", "test/**/*.ts"],
+  "references": [
+    {
+      "path": "./tsconfig.node.json"
+    }
+  ]
 }
